--- a/src/index.css
+++ b/src/index.css
@@ -156,3 +156,7 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.transaction::-webkit-scrollbar {
+  background-color: transparent;
+}
